--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -1,6 +1,45 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
-    <h3>Store</h3>
-{% endblock %}
+    <div class="row">
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/placeholder.webp' %}">
+            <div class="box-element product" >
+                <div class="box-element product" >
+                    <h6><strong>Product</strong></h6>
+                    <hr>
+                    <button class="btn btn-outline-secondary add-btn">Add to card</button>
+                    <a class="btn btn-outline-success" href="#">View</a>
+                    <h4 style="display: inline-block;float: right">$20</h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="box-element product" >
+            <img class="thumbnail" src="{% static 'images/placeholder.webp' %}">
+                <div class="box-element product" >
+                    <h6><strong>Product</strong></h6>
+                    <hr>
+                    <button class="btn btn-outline-secondary add-btn">Add to card</button>
+                    <a class="btn btn-outline-success" href="#">View</a>
+                    <h4 style="display: inline-block;float: right">$20</h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="box-element product" >
+            <img class="thumbnail" src="{% static 'images/placeholder.webp' %}">
+                <div class="box-element product" >
+                    <h6><strong>Product</strong></h6>
+                    <hr>
+                    <button class="btn btn-outline-secondary add-btn">Add to card</button>
+                    <a class="btn btn-outline-success" href="#">View</a>
+                    <h4 style="display: inline-block;float: right">$20</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
 
